@@ -9,6 +9,8 @@
  ********************************************************************************/
 package org.eclipse.openvsx;
 
+import static org.eclipse.openvsx.entities.FileResource.*;
+import static org.eclipse.openvsx.entities.FileResource.CHANGELOG;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyCollection;
 import static org.mockito.ArgumentMatchers.eq;
@@ -23,25 +25,22 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.function.Consumer;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
 import javax.persistence.EntityManager;
 
+import net.javacrumbs.shedlock.core.LockProvider;
+import org.eclipse.openvsx.adapter.VSCodeIdService;
+import org.eclipse.openvsx.cache.CacheService;
+import org.eclipse.openvsx.cache.ExtensionJsonCacheKeyGenerator;
+import org.eclipse.openvsx.cache.LatestExtensionVersionCacheKeyGenerator;
+import org.eclipse.openvsx.cache.LatestExtensionVersionDTOCacheKeyGenerator;
+import org.eclipse.openvsx.dto.ExtensionVersionDTO;
 import org.eclipse.openvsx.eclipse.EclipseService;
-import org.eclipse.openvsx.entities.Extension;
-import org.eclipse.openvsx.entities.ExtensionReview;
-import org.eclipse.openvsx.entities.ExtensionVersion;
-import org.eclipse.openvsx.entities.FileResource;
-import org.eclipse.openvsx.entities.Namespace;
-import org.eclipse.openvsx.entities.NamespaceMembership;
-import org.eclipse.openvsx.entities.PersonalAccessToken;
-import org.eclipse.openvsx.entities.UserData;
+import org.eclipse.openvsx.entities.*;
 import org.eclipse.openvsx.json.ExtensionJson;
 import org.eclipse.openvsx.json.NamespaceJson;
 import org.eclipse.openvsx.json.ResultJson;
@@ -52,13 +51,14 @@ import org.eclipse.openvsx.json.SearchResultJson;
 import org.eclipse.openvsx.json.UserJson;
 import org.eclipse.openvsx.repositories.RepositoryService;
 import org.eclipse.openvsx.search.ExtensionSearch;
-import org.eclipse.openvsx.search.SearchService;
+import org.eclipse.openvsx.search.ISearchService;
+import org.eclipse.openvsx.search.SearchUtilService;
 import org.eclipse.openvsx.security.OAuth2UserServices;
 import org.eclipse.openvsx.security.TokenService;
-import org.eclipse.openvsx.storage.AzureBlobStorageService;
-import org.eclipse.openvsx.storage.GoogleCloudStorageService;
-import org.eclipse.openvsx.storage.StorageUtilService;
-import org.elasticsearch.search.aggregations.Aggregations;
+import org.eclipse.openvsx.storage.*;
+import org.eclipse.openvsx.util.TargetPlatform;
+import org.eclipse.openvsx.util.VersionService;
+import org.jobrunr.scheduling.JobRequestScheduler;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -68,7 +68,6 @@ import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.context.annotation.Bean;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHitsImpl;
 import org.springframework.data.elasticsearch.core.TotalHitsRelation;
@@ -85,7 +84,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 @AutoConfigureWebClient
 @MockBean({
     ClientRegistrationRepository.class, UpstreamRegistryService.class, GoogleCloudStorageService.class,
-    AzureBlobStorageService.class
+    AzureBlobStorageService.class, VSCodeIdService.class, DownloadCountService.class, AzureDownloadCountService.class,
+    LockProvider.class, CacheService.class, EclipseService.class, JobRequestScheduler.class
 })
 public class RegistryAPITest {
 
@@ -96,19 +96,19 @@ public class RegistryAPITest {
     RepositoryService repositories;
 
     @MockBean
-    SearchService search;
+    SearchUtilService search;
 
     @MockBean
     EntityManager entityManager;
-
-    @MockBean
-    EclipseService eclipse;
 
     @Autowired
     MockMvc mockMvc;
 
     @Autowired
-    ExtensionService extensionService;
+    ExtensionService extensions;
+
+    @Autowired
+    VersionService versions;
 
     @Test
     public void testPublicNamespace() throws Exception {
@@ -156,10 +156,45 @@ public class RegistryAPITest {
                 .andExpect(content().json(extensionJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
+                })));
+    }
+
+    @Test
+    public void testExtensionNonDefaultTarget() throws Exception {
+        var extVersion = mockExtension("alpine-x64");
+        extVersion.setDisplayName("Foo Bar (alpine x64)");
+
+        mockMvc.perform(get("/api/{namespace}/{extension}", "foo", "bar"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar (alpine x64)";
+                    e.targetPlatform = "alpine-x64";
+                })));
+    }
+
+    @Test
+    public void testExtensionLinuxTarget() throws Exception {
+        var extVersion = mockExtension("linux-x64");
+        extVersion.setDisplayName("Foo Bar (linux x64)");
+        mockMvc.perform(get("/api/{namespace}/{extension}/{target}", "foo", "bar", "linux-x64"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.targetPlatform = "linux-x64";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar (linux x64)";
                 })));
     }
 
@@ -183,17 +218,57 @@ public class RegistryAPITest {
     }
 
     @Test
+    public void testUnknownExtensionTarget() throws Exception {
+        mockExtension();
+        mockMvc.perform(get("/api/{namespace}/{extension}/{target}", "foo", "bar", "win32-ia32"))
+                .andExpect(status().isNotFound())
+                .andExpect(content().json(errorJson("Extension not found: foo.bar (win32-ia32)")));
+    }
+
+    @Test
     public void testExtensionVersion() throws Exception {
         mockExtension();
-        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "1"))
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "1.0.0"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(extensionJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
+                })));
+    }
+
+    @Test
+    public void testExtensionVersionNonDefaultTarget() throws Exception {
+        var extVersion = mockExtension("darwin-arm64");
+        extVersion.setDisplayName("Foo Bar (darwin arm64)");
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "1.0.0"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar (darwin arm64)";
+                })));
+    }
+
+    @Test
+    public void testExtensionVersionMacOSXTarget() throws Exception {
+        var extVersion = mockExtension("darwin-arm64");
+        extVersion.setDisplayName("Foo Bar (darwin arm64)");
+        mockMvc.perform(get("/api/{namespace}/{extension}/{target}/{version}", "foo", "bar", "darwin-arm64", "1.0.0"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar (darwin arm64)";
                 })));
     }
 
@@ -205,10 +280,103 @@ public class RegistryAPITest {
                 .andExpect(content().json(extensionJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
+                    e.versionAlias = List.of("latest");
+                })));
+    }
+
+    @Test
+    public void testLatestExtensionVersionNonDefaultTarget() throws Exception {
+        var extVersion = mockExtension("alpine-arm64");
+        extVersion.setDisplayName("Foo Bar (alpine arm64)");
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "latest"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar (alpine arm64)";
+                    e.versionAlias = List.of("latest");
+                    e.targetPlatform = "alpine-arm64";
+                })));
+    }
+
+    @Test
+    public void testLatestExtensionVersionAlpineLinuxTarget() throws Exception {
+        var extVersion = mockExtension("alpine-arm64");
+        extVersion.setDisplayName("Foo Bar (alpine arm64)");
+        mockMvc.perform(get("/api/{namespace}/{extension}/{target}/{version}", "foo", "bar", "alpine-arm64", "latest"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar (alpine arm64)";
+                    e.versionAlias = List.of("latest");
+                    e.targetPlatform = "alpine-arm64";
+                })));
+    }
+
+    @Test
+    public void testPreReleaseExtensionVersion() throws Exception {
+        var extVersion = mockExtension();
+        extVersion.setPreRelease(true);
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "pre-release"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.versionAlias = List.of("pre-release", "latest");
+                    e.preRelease = true;
+                })));
+    }
+
+    @Test
+    public void testPreReleaseExtensionVersionNonDefaultTarget() throws Exception {
+        var extVersion = mockExtension("web");
+        extVersion.setPreRelease(true);
+        extVersion.setDisplayName("Foo Bar (web)");
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "pre-release"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar (web)";
+                    e.versionAlias = List.of("pre-release", "latest");
+                    e.preRelease = true;
+                })));
+    }
+
+    @Test
+    public void testPreReleaseExtensionVersionWebTarget() throws Exception {
+        var extVersion = mockExtension("web");
+        extVersion.setPreRelease(true);
+        extVersion.setDisplayName("Foo Bar (web)");
+        mockMvc.perform(get("/api/{namespace}/{extension}/{target}/{version}", "foo", "bar", "web", "pre-release"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar (web)";
+                    e.versionAlias = List.of("pre-release", "latest");
+                    e.preRelease = true;
                 })));
     }
 
@@ -217,31 +385,54 @@ public class RegistryAPITest {
         var extVersion = mockExtension();
         extVersion.setActive(false);
 
-        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "1"))
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "1.0.0"))
                 .andExpect(status().isNotFound())
-                .andExpect(content().json(errorJson("Extension not found: foo.bar version 1")));
+                .andExpect(content().json(errorJson("Extension not found: foo.bar 1.0.0")));
     }
 
     @Test
     public void testUnknownExtensionVersion() throws Exception {
         mockExtension();
-        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "2"))
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}", "foo", "bar", "2.0.0"))
                 .andExpect(status().isNotFound())
-                .andExpect(content().json(errorJson("Extension not found: foo.bar version 2")));
+                .andExpect(content().json(errorJson("Extension not found: foo.bar 2.0.0")));
     }
 
     @Test
-    public void testReadme() throws Exception {
+    public void testUnknownExtensionVersionTarget() throws Exception {
+        mockExtension();
+        mockMvc.perform(get("/api/{namespace}/{extension}/{target}/{version}", "foo", "bar", "linux-armhf", "1.0.0"))
+                .andExpect(status().isNotFound())
+                .andExpect(content().json(errorJson("Extension not found: foo.bar 1.0.0 (linux-armhf)")));
+    }
+
+    @Test
+    public void testReadmeUniversalTarget() throws Exception {
         mockReadme();
-        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1", "README"))
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1.0.0", "README"))
                 .andExpect(status().isOk())
                 .andExpect(content().string("Please read me"));
     }
 
     @Test
+    public void testReadmeWindowsTarget() throws Exception {
+        mockReadme("win32-x64");
+        mockMvc.perform(get("/api/{namespace}/{extension}/{target}/{version}/file/{fileName}", "foo", "bar", "win32-x64", "1.0.0", "README"))
+                .andExpect(status().isOk())
+                .andExpect(content().string("Please read me"));
+    }
+
+    @Test
+    public void testReadmeUnknownTarget() throws Exception {
+        mockReadme();
+        mockMvc.perform(get("/api/{namespace}/{extension}/{target}/{version}/file/{fileName}", "foo", "bar", "darwin-x64", "1.0.0", "README"))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
     public void testChangelog() throws Exception {
         mockChangelog();
-        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1", "CHANGELOG"))
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1.0.0", "CHANGELOG"))
                 .andExpect(status().isOk())
                 .andExpect(content().string("All notable changes is documented here"));
     }
@@ -249,7 +440,7 @@ public class RegistryAPITest {
     @Test
     public void testLicense() throws Exception {
         mockLicense();
-        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1", "LICENSE"))
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1.0.0", "LICENSE"))
                 .andExpect(status().isOk())
                 .andExpect(content().string("I never broke the Law! I am the law!"));
     }
@@ -259,14 +450,14 @@ public class RegistryAPITest {
         var extVersion = mockExtension();
         extVersion.setActive(false);
 
-        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1", "README"))
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1.0.0", "README"))
                 .andExpect(status().isNotFound());
     }
 
     @Test
     public void testUnknownFile() throws Exception {
         mockExtension();
-        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1", "unknown.txt"))
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "1.0.0", "unknown.txt"))
                 .andExpect(status().isNotFound());
     }
 
@@ -306,7 +497,7 @@ public class RegistryAPITest {
                     var e1 = new SearchEntryJson();
                     e1.namespace = "foo";
                     e1.name = "bar";
-                    e1.version = "1";
+                    e1.version = "1.0.0";
                     e1.timestamp = "2000-01-01T10:00Z";
                     e1.displayName = "Foo Bar";
                     s.extensions.add(e1);
@@ -315,10 +506,10 @@ public class RegistryAPITest {
 
     @Test
     public void testSearchInactive() throws Exception {
-        var extensions = mockSearch();
-        extensions.forEach(extension -> {
+        var extensionsList = mockSearch();
+        extensionsList.forEach(extension -> {
             extension.setActive(false);
-            extension.getLatest().setActive(false);
+            versions.getLatest(extension, null, false, false).setActive(false);
         });
 
         mockMvc.perform(get("/api/-/search?query={query}&size={size}&offset={offset}", "foo", "10", "0"))
@@ -328,13 +519,13 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryExtensionName() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(get("/api/-/query?extensionName={extensionName}", "bar"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -343,13 +534,13 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryNamespace() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(get("/api/-/query?namespaceName={namespaceName}", "foo"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -358,8 +549,10 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryUnknownExtension() throws Exception {
-        mockExtension();
-        Mockito.when(repositories.findExtensions("baz")).thenReturn(Streamable.empty());
+        mockExtensionVersionDTO();
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(TargetPlatform.NAME_UNIVERSAL, "baz"))
+                .thenReturn(Collections.emptyList());
+
         mockMvc.perform(get("/api/-/query?extensionName={extensionName}", "baz"))
                 .andExpect(status().isOk())
                 .andExpect(content().json("{ \"extensions\": [] }"));
@@ -367,24 +560,24 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryInactiveExtension() throws Exception {
-        var extVersion = mockExtension();
-        extVersion.setActive(false);
-        extVersion.getExtension().setActive(false);
+        var namespaceName = "foo";
+        var extensionName = "bar";
 
-        mockMvc.perform(get("/api/-/query?extensionId={extensionId}", "foo.bar"))
+        mockInactiveExtensionVersionDTO(namespaceName, extensionName);
+        mockMvc.perform(get("/api/-/query?extensionId={namespaceName}.{extensionName}", namespaceName, extensionName))
                 .andExpect(status().isOk())
                 .andExpect(content().json("{ \"extensions\": [] }"));
     }
 
     @Test
     public void testGetQueryExtensionId() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(get("/api/-/query?extensionId={extensionId}", "foo.bar"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -393,13 +586,13 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryExtensionUuid() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(get("/api/-/query?extensionUuid={extensionUuid}", "5678"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -408,13 +601,13 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryNamespaceUuid() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(get("/api/-/query?namespaceUuid={namespaceUuid}", "1234"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -422,8 +615,42 @@ public class RegistryAPITest {
     }
 
     @Test
+    public void testGetQueryMultipleTargets() throws Exception {
+        mockExtensionVersionDTOs();
+        mockMvc.perform(get("/api/-/query?namespaceUuid={namespaceUuid}", "1234"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.targetPlatform = "darwin-x64";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.targetPlatform = "linux-x64";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.targetPlatform = "alpine-arm64";
+                })));
+    }
+
+    @Test
     public void testPostQueryExtensionName() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"extensionName\": \"bar\" }"))
@@ -431,7 +658,7 @@ public class RegistryAPITest {
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -440,7 +667,7 @@ public class RegistryAPITest {
 
     @Test
     public void testPostQueryNamespace() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"namespaceName\": \"foo\" }"))
@@ -448,7 +675,7 @@ public class RegistryAPITest {
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -457,8 +684,10 @@ public class RegistryAPITest {
 
     @Test
     public void testPostQueryUnknownExtension() throws Exception {
-        mockExtension();
-        Mockito.when(repositories.findExtensions("baz")).thenReturn(Streamable.empty());
+        mockExtensionVersionDTO();
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, "baz"))
+                .thenReturn(Collections.emptyList());
+
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"extensionName\": \"baz\" }"))
@@ -468,10 +697,7 @@ public class RegistryAPITest {
 
     @Test
     public void testPostQueryInactiveExtension() throws Exception {
-        var extVersion = mockExtension();
-        extVersion.setActive(false);
-        extVersion.getExtension().setActive(false);
-
+        mockInactiveExtensionVersionDTO("foo", "bar");
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"extensionId\": \"foo.bar\" }"))
@@ -481,7 +707,7 @@ public class RegistryAPITest {
 
     @Test
     public void testPostQueryExtensionId() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"extensionId\": \"foo.bar\" }"))
@@ -489,7 +715,7 @@ public class RegistryAPITest {
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -498,7 +724,7 @@ public class RegistryAPITest {
 
     @Test
     public void testPostQueryExtensionUuid() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"extensionUuid\": \"5678\" }"))
@@ -506,7 +732,7 @@ public class RegistryAPITest {
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -515,7 +741,7 @@ public class RegistryAPITest {
 
     @Test
     public void testPostQueryNamespaceUuid() throws Exception {
-        mockExtension();
+        mockExtensionVersionDTO();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"namespaceUuid\": \"1234\" }"))
@@ -523,7 +749,7 @@ public class RegistryAPITest {
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
@@ -590,7 +816,7 @@ public class RegistryAPITest {
     @Test
     public void testPublishOrphan() throws Exception {
         mockForPublish("orphan");
-        var bytes = createExtensionPackage("bar", "1", null);
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
@@ -600,28 +826,29 @@ public class RegistryAPITest {
     
     @Test
     public void testPublishRequireLicenseNone() throws Exception {
-        var previousRequireLicense = extensionService.requireLicense;
+        var previousRequireLicense = extensions.requireLicense;
         try {
-            extensionService.requireLicense = true;
+            extensions.requireLicense = true;
             mockForPublish("contributor");
-            var bytes = createExtensionPackage("bar", "1", null);
+            var bytes = createExtensionPackage("bar", "1.0.0", null);
             mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                     .contentType(MediaType.APPLICATION_OCTET_STREAM)
                     .content(bytes))
                     .andExpect(status().isBadRequest())
                     .andExpect(content().json(errorJson("This extension cannot be accepted because it has no license.")));
         } finally {
-            extensionService.requireLicense = previousRequireLicense;
+            extensions.requireLicense = previousRequireLicense;
         }
     }
     
     @Test
     public void testPublishRequireLicenseOk() throws Exception {
-        var previousRequireLicense = extensionService.requireLicense;
+        var previousRequireLicense = extensions.requireLicense;
         try {
-            extensionService.requireLicense = true;
+            extensions.requireLicense = true;
             mockForPublish("contributor");
-            var bytes = createExtensionPackage("bar", "1", "MIT");
+            mockActiveVersion();
+            var bytes = createExtensionPackage("bar", "1.0.0", "MIT");
             mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                     .contentType(MediaType.APPLICATION_OCTET_STREAM)
                     .content(bytes))
@@ -629,21 +856,21 @@ public class RegistryAPITest {
                     .andExpect(content().json(extensionJson(e -> {
                         e.namespace = "foo";
                         e.name = "bar";
-                        e.version = "1";
+                        e.version = "1.0.0";
                         var u = new UserJson();
                         u.loginName = "test_user";
                         e.publishedBy = u;
                         e.verified = true;
                     })));
         } finally {
-            extensionService.requireLicense = previousRequireLicense;
+            extensions.requireLicense = previousRequireLicense;
         }
     }
     
     @Test
     public void testPublishInactiveToken() throws Exception {
         mockForPublish("invalid");
-        var bytes = createExtensionPackage("bar", "1", null);
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
@@ -654,7 +881,7 @@ public class RegistryAPITest {
     @Test
     public void testPublishUnknownNamespace() throws Exception {
         mockAccessToken();
-        var bytes = createExtensionPackage("bar", "1", null);
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
@@ -666,7 +893,8 @@ public class RegistryAPITest {
     @Test
     public void testPublishVerifiedOwner() throws Exception {
         mockForPublish("owner");
-        var bytes = createExtensionPackage("bar", "1", null);
+        mockActiveVersion();
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
@@ -674,18 +902,19 @@ public class RegistryAPITest {
                 .andExpect(content().json(extensionJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     var u = new UserJson();
                     u.loginName = "test_user";
                     e.publishedBy = u;
                     e.verified = true;
                 })));
     }
-    
+
     @Test
     public void testPublishVerifiedContributor() throws Exception {
         mockForPublish("contributor");
-        var bytes = createExtensionPackage("bar", "1", null);
+        mockActiveVersion();
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
@@ -693,18 +922,19 @@ public class RegistryAPITest {
                 .andExpect(content().json(extensionJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     var u = new UserJson();
                     u.loginName = "test_user";
                     e.publishedBy = u;
                     e.verified = true;
                 })));
     }
-    
+
     @Test
     public void testPublishSoleContributor() throws Exception {
         mockForPublish("sole-contributor");
-        var bytes = createExtensionPackage("bar", "1", null);
+        mockActiveVersion();
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
@@ -712,18 +942,19 @@ public class RegistryAPITest {
                 .andExpect(content().json(extensionJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     var u = new UserJson();
                     u.loginName = "test_user";
                     e.publishedBy = u;
                     e.verified = false;
                 })));
     }
-    
+
     @Test
     public void testPublishRestrictedPrivileged() throws Exception {
         mockForPublish("privileged");
-        var bytes = createExtensionPackage("bar", "1", null);
+        mockActiveVersion();
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
@@ -731,47 +962,85 @@ public class RegistryAPITest {
                 .andExpect(content().json(extensionJson(e -> {
                     e.namespace = "foo";
                     e.name = "bar";
-                    e.version = "1";
+                    e.version = "1.0.0";
                     var u = new UserJson();
                     u.loginName = "test_user";
                     e.publishedBy = u;
-                    e.verified = false;
+                    e.verified = true;
                 })));
     }
-    
+
     @Test
     public void testPublishRestrictedUnrelated() throws Exception {
         mockForPublish("unrelated");
-        var bytes = createExtensionPackage("bar", "1", null);
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
                 .andExpect(status().isBadRequest())
                 .andExpect(content().json(errorJson("Insufficient access rights for publisher: foo")));
     }
-    
+
     @Test
     public void testPublishExistingExtension() throws Exception {
         mockForPublish("existing");
-        var bytes = createExtensionPackage("bar", "1", null);
+        var bytes = createExtensionPackage("bar", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
                 .andExpect(status().isBadRequest())
-                .andExpect(content().json(errorJson("Extension foo.bar version 1 is already published.")));
+                .andExpect(content().json(errorJson("Extension foo.bar 1.0.0 is already published.")));
     }
-    
+
+    @Test
+    public void testPublishSameVersionDifferentTargetPlatformPreRelease() throws Exception {
+        var extVersion = mockExtension(TargetPlatform.NAME_WIN32_X64);
+        extVersion.setVersion("1.0.0");
+        extVersion.setPreRelease(false);
+
+        mockForPublish("contributor");
+        Mockito.when(repositories.findVersions(eq("1.0.0"), any(Extension.class)))
+                .thenReturn(Streamable.of(extVersion));
+
+        var bytes = createExtensionPackage("bar", "1.0.0", null, true, TargetPlatform.NAME_LINUX_X64);
+        mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .content(bytes))
+                .andExpect(status().isCreated())
+                .andExpect(content().json(warningJson("A stable release already exists for foo.bar-1.0.0.\n" +
+                        "To prevent update conflicts, we recommend that this pre-release uses 1.1.0 as its version instead.")));
+    }
+
+    @Test
+    public void testPublishSameVersionDifferentTargetPlatformStableRelease() throws Exception {
+        var extVersion = mockExtension(TargetPlatform.NAME_DARWIN_ARM64);
+        extVersion.setVersion("1.5.0");
+        extVersion.setPreRelease(true);
+
+        mockForPublish("contributor");
+        Mockito.when(repositories.findVersions(eq("1.5.0"), any(Extension.class)))
+                .thenReturn(Streamable.of(extVersion));
+
+        var bytes = createExtensionPackage("bar", "1.5.0", null, false, TargetPlatform.NAME_ALPINE_ARM64);
+        mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
+                .contentType(MediaType.APPLICATION_OCTET_STREAM)
+                .content(bytes))
+                .andExpect(status().isCreated())
+                .andExpect(content().json(warningJson("A pre-release already exists for foo.bar-1.5.0.\n" +
+                        "To prevent update conflicts, we recommend that this stable release uses 1.6.0 as its version instead.")));
+    }
+
     @Test
     public void testPublishInvalidName() throws Exception {
         mockForPublish("contributor");
-        var bytes = createExtensionPackage("b.a.r", "1", null);
+        var bytes = createExtensionPackage("b.a.r", "1.0.0", null);
         mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
                 .andExpect(status().isBadRequest())
                 .andExpect(content().json(errorJson("Invalid extension name: b.a.r")));
     }
-    
+
     @Test
     public void testPublishInvalidVersion() throws Exception {
         mockForPublish("contributor");
@@ -927,6 +1196,22 @@ public class RegistryAPITest {
 
     //---------- UTILITY ----------//
 
+    private void mockActiveVersion() {
+        var namespace = new Namespace();
+        namespace.setName("foo");
+        var extension = new Extension();
+        extension.setId(1);
+        extension.setName("bar");
+        extension.setActive(true);
+        extension.setNamespace(namespace);
+        var extVersion = new ExtensionVersion();
+        extVersion.setVersion("1.0.0");
+        extVersion.setActive(true);
+        extVersion.setTargetPlatform(TargetPlatform.NAME_UNIVERSAL);
+        extVersion.setExtension(extension);
+        extension.getVersions().add(extVersion);
+    }
+
     private Namespace mockNamespace() {
         var namespace = new Namespace();
         namespace.setName("foobar");
@@ -942,41 +1227,145 @@ public class RegistryAPITest {
         content.accept(json);
         return new ObjectMapper().writeValueAsString(json);
     }
-    
+
+    private void mockInactiveExtensionVersionDTO(String namespaceName, String extensionName) {
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName, namespaceName))
+                .thenReturn(Collections.emptyList());
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespaceName(null, namespaceName))
+                .thenReturn(Collections.emptyList());
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName))
+                .thenReturn(Collections.emptyList());
+    }
+
+    private void mockExtensionVersionDTOs() {
+        var namespaceId = 1L;
+        var namespacePublicId = "1234";
+        var namespaceName = "foo";
+        var extensionId = 2L;
+        var extensionName = "bar";
+        var id = 3L;
+        var version = "1.0.0";
+        var timestamp = LocalDateTime.parse("2000-01-01T10:00");
+        var displayName = "Foo Bar";
+
+        var versions = new ArrayList<ExtensionVersionDTO>();
+        var targetPlatforms = List.of("darwin-x64", "linux-x64", "alpine-arm64");
+        for(var i = 0; i < targetPlatforms.size(); i++) {
+            var targetPlatform = targetPlatforms.get(i);
+            versions.add(new ExtensionVersionDTO(
+                    namespaceId, namespacePublicId, namespaceName, extensionId, null, extensionName,
+                    null, 0, null, null,
+                    null, null, null, null, null, null, null,
+                    id + i, version, targetPlatform, false, false, timestamp, displayName,
+                    null, null, null, null, null, null, null,
+                    null, null, null, null, null, null, null,
+                    null
+            ));
+        }
+
+        var extensionPublicId = "5678";
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionPublicId(null, extensionPublicId))
+                .thenReturn(versions);
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespacePublicId(null, namespacePublicId))
+                .thenReturn(versions);
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName, namespaceName))
+                .thenReturn(versions);
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespaceName(null, namespaceName))
+                .thenReturn(versions);
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName))
+                .thenReturn(versions);
+        Mockito.when(repositories.findAllActiveExtensionVersionDTOs(Set.of(extensionId), null))
+                .thenReturn(versions);
+
+        Mockito.when(repositories.findAllActiveReviewCountsByExtensionId(Set.of(extensionId)))
+                .thenReturn(Collections.emptyMap());
+        var fileTypes = List.of(DOWNLOAD, MANIFEST, ICON, README, LICENSE, CHANGELOG);
+        Mockito.when(repositories.findAllFileResourceDTOsByExtensionVersionIdAndType(List.of(id), fileTypes))
+                .thenReturn(Collections.emptyList());
+        Mockito.when(repositories.findAllNamespaceMembershipDTOs(List.of(namespaceId)))
+                .thenReturn(Collections.emptyList());
+    }
+
+    private ExtensionVersionDTO mockExtensionVersionDTO() {
+        var namespaceId = 1L;
+        var namespacePublicId = "1234";
+        var namespaceName = "foo";
+        var extensionId = 2L;
+        var extensionName = "bar";
+        var id = 3L;
+        var version = "1.0.0";
+        var timestamp = LocalDateTime.parse("2000-01-01T10:00");
+        var displayName = "Foo Bar";
+
+        var extVersion = new ExtensionVersionDTO(
+                namespaceId, namespacePublicId, namespaceName, extensionId, null, extensionName,
+                null, 0, null, null,
+                null, null, null, null, null, null, null, id,
+                version, TargetPlatform.NAME_UNIVERSAL, false, false, timestamp, displayName,
+                null, null, null, null, null, null, null,
+                null, null, null, null, null, null, null,
+                null
+        );
+
+        var extensionPublicId = "5678";
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionPublicId(null, extensionPublicId))
+                .thenReturn(List.of(extVersion));
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespacePublicId(null, namespacePublicId))
+                .thenReturn(List.of(extVersion));
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName, namespaceName))
+                .thenReturn(List.of(extVersion));
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespaceName(null, namespaceName))
+                .thenReturn(List.of(extVersion));
+        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName))
+                .thenReturn(List.of(extVersion));
+        Mockito.when(repositories.findAllActiveExtensionVersionDTOs(Set.of(extensionId), null))
+                .thenReturn(List.of(extVersion));
+
+        Mockito.when(repositories.findAllActiveReviewCountsByExtensionId(Set.of(extensionId)))
+                .thenReturn(Collections.emptyMap());
+        var fileTypes = List.of(DOWNLOAD, MANIFEST, ICON, README, LICENSE, CHANGELOG);
+        Mockito.when(repositories.findAllFileResourceDTOsByExtensionVersionIdAndType(Set.of(id), fileTypes))
+                .thenReturn(Collections.emptyList());
+        Mockito.when(repositories.findAllNamespaceMembershipDTOs(List.of(namespaceId)))
+                .thenReturn(Collections.emptyList());
+
+        return extVersion;
+    }
+
     private ExtensionVersion mockExtension() {
+        return mockExtension(TargetPlatform.NAME_UNIVERSAL);
+    }
+
+    private ExtensionVersion mockExtension(String targetPlatform) {
         var namespace = new Namespace();
         namespace.setName("foo");
         namespace.setPublicId("1234");
         var extension = new Extension();
         extension.setName("bar");
+        extension.setId(extension.getName().hashCode());
         extension.setNamespace(namespace);
         extension.setPublicId("5678");
         extension.setActive(true);
         var extVersion = new ExtensionVersion();
-        extension.setLatest(extVersion);
-        extVersion.setExtension(extension);
-        extVersion.setVersion("1");
+        extVersion.setTargetPlatform(targetPlatform);
+        extVersion.setVersion("1.0.0");
         extVersion.setTimestamp(LocalDateTime.parse("2000-01-01T10:00"));
         extVersion.setActive(true);
         extVersion.setDisplayName("Foo Bar");
+        extVersion.setExtension(extension);
+        extension.getVersions().add(extVersion);
         Mockito.when(repositories.findExtension("bar", "foo"))
                 .thenReturn(extension);
-        Mockito.when(repositories.findVersion("1", "bar", "foo"))
+        Mockito.when(repositories.findVersion("1.0.0", targetPlatform, "bar", "foo"))
                 .thenReturn(extVersion);
         Mockito.when(repositories.findVersions(extension))
                 .thenReturn(Streamable.of(extVersion));
         Mockito.when(repositories.findActiveExtensions(namespace))
                 .thenReturn(Streamable.of(extension));
-        Mockito.when(repositories.getVersionStrings(extension))
-                .thenReturn(Streamable.of(extVersion.getVersion()));
-        Mockito.when(repositories.getActiveVersionStrings(extension))
-                .thenReturn(Streamable.of(extVersion.getVersion()));
         Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
                 .thenReturn(0l);
         Mockito.when(repositories.countActiveReviews(extension))
                 .thenReturn(0l);
-        Mockito.when(repositories.findFilesByType(eq(extVersion), anyCollection()))
-                .thenReturn(Streamable.empty());
         Mockito.when(repositories.findNamespace("foo"))
                 .thenReturn(namespace);
         Mockito.when(repositories.findExtensions("bar"))
@@ -985,6 +1374,20 @@ public class RegistryAPITest {
                 .thenReturn(namespace);
         Mockito.when(repositories.findExtensionByPublicId("5678"))
                 .thenReturn(extension);
+
+        var download = new FileResource();
+        download.setExtension(extVersion);
+        download.setType(DOWNLOAD);
+        download.setStorageType(STORAGE_DB);
+        download.setName("extension-1.0.0.vsix");
+        Mockito.when(repositories.findFilesByType(anyCollection(), anyCollection())).thenAnswer(invocation -> {
+            Collection<ExtensionVersion> extVersions = invocation.getArgument(0);
+            Collection<String> types = invocation.getArgument(1);
+            return types.contains(DOWNLOAD) && extVersions.iterator().hasNext() && download.getExtension().equals(extVersions.iterator().next())
+                    ? Streamable.of(download)
+                    : Streamable.empty();
+        });
+
         return extVersion;
     }
 
@@ -994,12 +1397,21 @@ public class RegistryAPITest {
         return new ObjectMapper().writeValueAsString(json);
     }
 
-    private String queryResultJson(Consumer<ExtensionJson> content) throws JsonProcessingException {
-        return "{\"extensions\":[" + extensionJson(content) + "]}";
+    private String queryResultJson(Consumer<ExtensionJson>... contents) throws JsonProcessingException {
+        var extensionJsons = new ArrayList<String>();
+        for(var content : contents) {
+            extensionJsons.add(extensionJson(content));
+        }
+
+        return "{\"extensions\":[" + String.join(",", extensionJsons) + "]}";
     }
 
     private FileResource mockReadme() {
-        var extVersion = mockExtension();
+        return mockReadme(TargetPlatform.NAME_UNIVERSAL);
+    }
+
+    private FileResource mockReadme(String targetPlatform) {
+        var extVersion = mockExtension(targetPlatform);
         var resource = new FileResource();
         resource.setExtension(extVersion);
         resource.setName("README");
@@ -1075,13 +1487,12 @@ public class RegistryAPITest {
         extension.setId(1l);
         var entry1 = new ExtensionSearch();
         entry1.id = 1;
-        var searchHit = new SearchHit<ExtensionSearch>("0", "1", 1.0f, null, null, entry1);
-        var searchHits = new SearchHitsImpl<ExtensionSearch>(1, TotalHitsRelation.EQUAL_TO, 1.0f, "1",
-                Arrays.asList(searchHit), new Aggregations(Collections.emptyList()));
+        var searchHit = new SearchHit<>("0", "1", null, 1.0f, null, null, null, null, null, null, entry1);
+        var searchHits = new SearchHitsImpl<>(1, TotalHitsRelation.EQUAL_TO, 1.0f, "1", List.of(searchHit), null, null);
         Mockito.when(search.isEnabled())
                 .thenReturn(true);
-        var searchOptions = new SearchService.Options("foo", null, 10, 0, "desc", "relevance", false);
-        Mockito.when(search.search(searchOptions, PageRequest.of(0, 10)))
+        var searchOptions = new ISearchService.Options("foo", null, null, 10, 0, "desc", "relevance", false);
+        Mockito.when(search.search(searchOptions))
                 .thenReturn(searchHits);
         Mockito.when(entityManager.find(Extension.class, 1l))
                 .thenReturn(extension);
@@ -1121,25 +1532,21 @@ public class RegistryAPITest {
             var extension = new Extension();
             extension.setName("bar");
             var extVersion = new ExtensionVersion();
-            extVersion.setExtension(extension);
-            extVersion.setVersion("1");
+            extVersion.setTargetPlatform(TargetPlatform.NAME_UNIVERSAL);
+            extVersion.setVersion("1.0.0");
             extVersion.setActive(true);
             Mockito.when(repositories.findExtension("bar", namespace))
                     .thenReturn(extension);
-            Mockito.when(repositories.findVersion("1", extension))
+            Mockito.when(repositories.findVersion("1.0.0", TargetPlatform.NAME_UNIVERSAL, extension))
                     .thenReturn(extVersion);
         }
         Mockito.when(repositories.countActiveReviews(any(Extension.class)))
                 .thenReturn(0l);
         Mockito.when(repositories.findVersions(any(Extension.class)))
                 .thenReturn(Streamable.empty());
-        Mockito.when(repositories.findActiveVersions(any(Extension.class), any(boolean.class)))
+        Mockito.when(repositories.findFilesByType(anyCollection(), anyCollection()))
                 .thenReturn(Streamable.empty());
-        Mockito.when(repositories.getVersionStrings(any(Extension.class)))
-                .thenReturn(Streamable.empty());
-        Mockito.when(repositories.getActiveVersionStrings(any(Extension.class)))
-                .thenReturn(Streamable.empty());
-        Mockito.when(repositories.findFilesByType(any(ExtensionVersion.class), anyCollection()))
+        Mockito.when(repositories.findVersions(eq("1.0.0"), any(Extension.class)))
                 .thenReturn(Streamable.empty());
         if (mode.equals("owner")) {
             var ownerMem = new NamespaceMembership();
@@ -1226,15 +1633,24 @@ public class RegistryAPITest {
         var json = ResultJson.error(message);
         return new ObjectMapper().writeValueAsString(json);
     }
-    
+
+    private String warningJson(String message) throws JsonProcessingException {
+        var json = ResultJson.warning(message);
+        return new ObjectMapper().writeValueAsString(json);
+    }
+
     private byte[] createExtensionPackage(String name, String version, String license) throws IOException {
+        return createExtensionPackage(name, version, license, false, null);
+    }
+
+    private byte[] createExtensionPackage(String name, String version, String license, boolean preRelease, String targetPlatform) throws IOException {
         var bytes = new ByteArrayOutputStream();
         var archive = new ZipOutputStream(bytes);
         archive.putNextEntry(new ZipEntry("extension.vsixmanifest"));
         var vsixmanifest = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
             "<PackageManifest Version=\"2.0.0\" xmlns=\"http://schemas.microsoft.com/developer/vsx-schema/2011\" xmlns:d=\"http://schemas.microsoft.com/developer/vsx-schema-design/2011\">" +
             "<Metadata>" +
-            "<Identity Language=\"en-US\" Id=\""+ name +"\" Version=\"" + version + "\" Publisher=\"foo\"  />" +
+            "<Identity Language=\"en-US\" Id=\""+ name +"\" Version=\"" + version + "\" Publisher=\"foo\" " + (targetPlatform != null ? "TargetPlatform=\"" + targetPlatform + "\"" : "")  + " />" +
             "<DisplayName>foo</DisplayName>" +
             "<Description xml:space=\"preserve\"></Description>" +
             "<Tags></Tags>" +
@@ -1248,6 +1664,7 @@ public class RegistryAPITest {
             "<Property Id=\"Microsoft.VisualStudio.Code.ExtensionKind\" Value=\"ui,web,workspace\" />" +
             "<Property Id=\"Microsoft.VisualStudio.Code.LocalizedLanguages\" Value=\"\" />" +
             "<Property Id=\"Microsoft.VisualStudio.Services.GitHubFlavoredMarkdown\" Value=\"true\" />" +
+            (preRelease ? "<Property Id=\"Microsoft.VisualStudio.Code.PreRelease\" Value=\"true\" />" : "") +
             "</Properties>" +
             "</Metadata>" +
             "<Installation>" +
@@ -1309,6 +1726,23 @@ public class RegistryAPITest {
         StorageUtilService storageUtilService() {
             return new StorageUtilService();
         }
+
+        @Bean
+        ExtensionJsonCacheKeyGenerator extensionJsonCacheKeyGenerator() { return new ExtensionJsonCacheKeyGenerator(); }
+
+        @Bean
+        VersionService versionService() {
+            return new VersionService();
+        }
+
+        @Bean
+        LatestExtensionVersionCacheKeyGenerator latestExtensionVersionCacheKeyGenerator() {
+            return new LatestExtensionVersionCacheKeyGenerator();
+        }
+
+        @Bean
+        LatestExtensionVersionDTOCacheKeyGenerator latestExtensionVersionDTOCacheKeyGenerator() {
+            return new LatestExtensionVersionDTOCacheKeyGenerator();
+        }
     }
-    
 }
